move java 17 fixes